examples/test/testpolicy9932.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9932
  namespace: namespace292
spec:
  podSelector:
    matchLabels:
      key24: value38
      key44: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value23
          key9: value27
          key35: value31
      podSelector:
        matchLabels:
          key23: value22
          key16: value21
